--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -46,7 +46,7 @@ section {
     --padding: #{toRem(180px)};
   }
 
-  padding-inline: var(--sp-5);
+  padding-inline: var(--sp-4);
   padding-block-start: var(--padding);
 }
 
